Fix Mobile About Page spacing

--- a/client/src/pages/AboutPage/index.scss
+++ b/client/src/pages/AboutPage/index.scss
@@ -27,7 +27,7 @@
 }
 
 .about-us-body-top {
-  font-size: 30px;
+  font-size: 1.75em;
   padding-bottom: 10px;
   text-align: left;
   color: black;
@@ -35,7 +35,7 @@
 
 .about-us-body-middle {
   text-align: left;
-  font-size: 20px;
+  font-size: 1.2em;
   color: black;
   border-bottom: 1px solid gray;
   padding-bottom: 25px;
@@ -43,7 +43,7 @@
 
 .about-us-body-last {
   text-align: left;
-  font-size: 20px;
+  font-size: 1.2em;
   color: black;
   padding-bottom: 25px;
 }
